# doremi

./: .gitignore  Claude.md  PROJECT.md  README.md  pyproject.toml
docs/: architecture.md  hugging face access.md  roadmap.md
src/doremi/: __init__.py  app.py  config.py
src/doremi.egg-info/: PKG-INFO  SOURCES.txt
src/phase1/: __init__.py  whisper_example.py
